3.4.0
=====
Mar 7, 2022
- Add support for negated if conditions

3.3.2
=====
Feb 25, 2022
- Put gwen REPL .history file in output directory instead of root

3.3.1
=====
Feb 25, 2022
- Only generate slideshow report if screenshotting is enabled

3.3.0
=====
Feb 22, 2022
- Remove redundant reference to data file record number in html reports
- Report undefined step errors in StepDefs
- Handle breakpoints entered in REPL
- Add `@Finally` step annotation
  - Steps with this annotation will execute regardless of current evaluation status
- Add implicit attributes
  - `gwen.eval.status.keyword`
    - The current evaluation status
  - `gwen.eval.status.message` 
    - The current evaluation status message (if failed or sustained, blank otherwise)

3.2.0
=====
Feb 2, 2022
- Improved Background reporting
  - Put Backgrounds above Sceanrios in HTML reports
  - Remove name/value parameters from generated input data steps
  - Include input data file name and record number in generated Background description
- Add support for adding breakpoints to feature and meta steps
  - Breakpoints are created by adding `@Breakpoint ` to the start of step expressions
  - Breakpoints are activated by invoking Gwen with the new `-d|--debug` CLI option
- Fix Gwen impl name and version outputs
- Update Scala from v3.0.2 to v3.1.0

3.1.6
=====
Jan 14, 2022
- Fix issue gwen-interpreter/gwen-web#95:
  - Handle similar step defs

3.1.5
=====
Jan 13, 2022
- Handle env vars in masked settings

3.1.4
=====
Jan 11, 2022
- Fix issue gwen-interpreter/gwen-web#94:
  - Handle wait/until errors correctly
- Fix issue gwen-interpreter/gwen-web#95:
  - Handle similar step defs

3.1.3
=====
Dec 30, 2021
- Update log4j from version 2.17.0 to 2.17.1

3.1.2
=====
Dec 26, 2021
- Fix issue gwen-interpreter/gwen-web#93:
  - Resolve composite step conflicts

3.1.1
=====
Dec 18, 2021
- Update log4j from version 2.16.0 to 2.17.0

3.1.0
=====
Dec 16, 2021
- Update log4j from version 1.2.17 to 2.16.0