@@ -211,6 +211,8 @@ class EvalContext(val options: GwenOptions, envState: EnvState)
         val status = eStep.stepDef map { sd => sd.evalStatus }  getOrElse {
           eStep.evalStatus match {
             case Failed(_, error) => Failed(System.nanoTime - start, error)
+            case Disabled => Disabled
+            case p: Passed => Passed(System.nanoTime - start, p.abstained)
             case _ => Passed(System.nanoTime - start)
           }
         }
