@@ -43,7 +43,7 @@ class BindingsTest extends BaseTest {
           
         Settings.init(options.settingsFiles*)
         interpreter.run(options, None) match {
-          case Passed(_) => // excellent :)
+          case _: Passed => // excellent :)
           case Failed(_, error) => error.printStackTrace(); fail(error.getMessage)
           case _ => fail("evaluation expected but got noop")
         }
@@ -65,7 +65,7 @@ class BindingsTest extends BaseTest {
         
         Settings.init(options.settingsFiles*)
         interpreter.run(options, None) match {
-          case Passed(_) => // excellent :)
+          case _: Passed => // excellent :)
           case Failed(_, error) => error.printStackTrace(); fail(error.getMessage)
           case _ => fail("evaluation expected but got noop")
         }
