@@ -42,7 +42,7 @@ class DSLConflictsTest extends BaseTest {
         
     Settings.init(options.settingsFiles*)
     interpreter.run(options, None) match {
-      case Passed(_) => // excellent :)
+      case _: Passed => // excellent :)
       case Failed(_, error) => error.printStackTrace(); fail(error.getMessage)
       case _ => fail("evaluation expected but got noop")
     }
