@@ -41,7 +41,7 @@ class SyncTest extends BaseTest {
         )
           
         interpreter.run(options, None) match {
-          case Passed(_) => // excellent :)
+          case _: Passed => // excellent :)
           case Failed(_, error) => error.printStackTrace(); fail(error.getMessage)
           case _ => fail("evaluation expected but got noop")
         }
@@ -62,7 +62,7 @@ class SyncTest extends BaseTest {
         )
           
         interpreter.run(options, None) match {
-          case Passed(_) => // excellent :)
+          case _: Passed => // excellent :)
           case Failed(_, error) => error.printStackTrace(); fail(error.getMessage)
           case _ => fail("evaluation expected but got noop")
         }
