@@ -38,7 +38,7 @@ class TablesForEachTest extends BaseTest {
     )
       
     interpreter.run(options, None) match {
-      case Passed(_) => // excellent :)
+      case _: Passed => // excellent :)
       case Failed(_, error) => error.printStackTrace(); fail(error.getMessage)
       case _ => fail("evaluation expected but got noop")
     }
@@ -55,7 +55,7 @@ class TablesForEachTest extends BaseTest {
     )
       
     interpreter.run(options, None) match {
-      case Passed(_) => // excellent :)
+      case _: Passed => // excellent :)
       case Failed(_, error) => error.printStackTrace(); fail(error.getMessage)
       case _ => fail("evaluation expected but got noop")
     }
